[package]
name = "secure_chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
reqwest = { version = "0.11.10", features = ["blocking", "json"] } # HTTP Client
serde_json = "1.0.79"
serde = {version="1.0.136", features=["derive"]}